avoid overflow

--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -9,7 +9,7 @@ body{
 padding-top: 91px;
 font-size: 1.5rem;
 font-family: 'Source Sans Pro', sans-serif;
-
+overflow-x: hidden;
 	
 
 }
